# gorgonzola

./: .gitignore  .gitmodules  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
src/: CMakeLists.txt
src/antlr4/: Cypher.g4  README.md
src/binder/: CMakeLists.txt  binder.cpp  binder_scope.cpp  bound_scan_source.cpp  bound_statement_result.cpp  bound_statement_rewriter.cpp  bound_statement_visitor.cpp  expression_binder.cpp  expression_visitor.cpp
src/binder/bind/: CMakeLists.txt  bind_attach_database.cpp  bind_create_macro.cpp  bind_ddl.cpp  bind_detach_database.cpp  bind_explain.cpp  bind_export_database.cpp  bind_extension.cpp  bind_extension_clause.cpp  bind_file_scan.cpp  bind_graph_pattern.cpp  bind_import_database.cpp  bind_projection_clause.cpp  bind_query.cpp  bind_reading_clause.cpp  bind_standalone_call.cpp  bind_standalone_call_function.cpp  bind_table_function.cpp  bind_transaction.cpp  bind_updating_clause.cpp  bind_use_database.cpp
src/binder/bind_expression/: CMakeLists.txt  bind_boolean_expression.cpp  bind_case_expression.cpp  bind_comparison_expression.cpp  bind_function_expression.cpp  bind_lambda_expression.cpp  bind_literal_expression.cpp  bind_null_operator_expression.cpp  bind_parameter_expression.cpp  bind_property_expression.cpp  bind_subquery_expression.cpp  bind_variable_expression.cpp
src/binder/ddl/: CMakeLists.txt  bound_alter_info.cpp  property_definition.cpp
src/binder/expression/: CMakeLists.txt  aggregate_function_expression.cpp  case_expression.cpp  expression.cpp  expression_util.cpp  literal_expression.cpp  node_expression.cpp  node_rel_expression.cpp  parameter_expression.cpp  property_expression.cpp  rel_expression.cpp  scalar_function_expression.cpp  variable_expression.cpp
src/binder/query/: CMakeLists.txt  bound_delete_clause.cpp  bound_insert_clause.cpp  bound_merge_clause.cpp  bound_set_clause.cpp  query_graph.cpp  query_graph_label_analyzer.cpp
src/binder/rewriter/: CMakeLists.txt  match_clause_pattern_label_rewriter.cpp  normalized_query_part_match_rewriter.cpp  with_clause_projection_rewriter.cpp
src/binder/visitor/: CMakeLists.txt  confidential_statement_analyzer.cpp  default_type_solver.cpp  property_collector.cpp
src/c_api/: CMakeLists.txt  connection.cpp  data_type.cpp  database.cpp  flat_tuple.cpp  prepared_statement.cpp  query_result.cpp  query_summary.cpp  value.cpp  version.cpp
src/catalog/: CMakeLists.txt  catalog.cpp  catalog_set.cpp  property_definition_collection.cpp
src/catalog/catalog_entry/: CMakeLists.txt  catalog_entry.cpp  catalog_entry_type.cpp  (+9 more)
src/common/: CMakeLists.txt  case_insensitive_map.cpp  checksum.cpp  constants.cpp  database_lifecycle_manager.cpp  expression_type.cpp  in_mem_overflow_buffer.cpp  mask.cpp  md5.cpp  metric.cpp  null_mask.cpp  profiler.cpp  random_engine.cpp  roaring_mask.cpp  sha256.cpp  string_utils.cpp  system_message.cpp  type_utils.cpp  utils.cpp  windows_utils.cpp
src/expression_evaluator/: CMakeLists.txt  case_evaluator.cpp  expression_evaluator.cpp  expression_evaluator_utils.cpp  expression_evaluator_visitor.cpp  function_evaluator.cpp  lambda_evaluator.cpp  list_slice_info.cpp  literal_evaluator.cpp  path_evaluator.cpp  pattern_evaluator.cpp  reference_evaluator.cpp
src/extension/: CMakeLists.txt  catalog_extension.cpp  extension.cpp  extension_entries.cpp  extension_installer.cpp  extension_manager.cpp  generated_extension_loader.cpp.in  generated_extension_loader.h.in  loaded_extension.cpp
src/function/: CMakeLists.txt  aggregate_function.cpp  base_lower_upper_operation.cpp  built_in_function_utils.cpp  cast_from_string_functions.cpp  cast_string_non_nested_functions.cpp  comparison_functions.cpp  find_function.cpp  function.cpp  function_collection.cpp  scalar_macro_function.cpp  vector_arithmetic_functions.cpp  vector_blob_functions.cpp  vector_boolean_functions.cpp  vector_cast_functions.cpp  vector_date_functions.cpp  vector_hash_functions.cpp  vector_node_rel_functions.cpp  vector_null_functions.cpp  vector_string_functions.cpp  vector_timestamp_functions.cpp  vector_uuid_functions.cpp
src/graph/: CMakeLists.txt  graph.cpp  graph_entry.cpp  graph_entry_set.cpp  on_disk_graph.cpp  parsed_graph_entry.cpp
src/main/: CMakeLists.txt  attached_database.cpp  client_context.cpp  connection.cpp  database.cpp  database_manager.cpp  db_config.cpp  plan_printer.cpp  prepared_statement.cpp  prepared_statement_manager.cpp  query_result.cpp  query_summary.cpp  settings.cpp  storage_driver.cpp  version.cpp
src/optimizer/: CMakeLists.txt  acc_hash_join_optimizer.cpp  agg_key_dependency_optimizer.cpp  cardinality_updater.cpp  correlated_subquery_unnest_solver.cpp  factorization_rewriter.cpp  filter_push_down_optimizer.cpp  limit_push_down_optimizer.cpp  logical_operator_collector.cpp  logical_operator_visitor.cpp  optimizer.cpp  projection_push_down_optimizer.cpp  remove_factorization_rewriter.cpp  remove_unnecessary_join_optimizer.cpp  schema_populator.cpp  top_k_optimizer.cpp
src/parser/: CMakeLists.txt  create_macro.cpp  parsed_statement_visitor.cpp  parser.cpp  transformer.cpp
src/planner/: CMakeLists.txt  join_order_enumerator_context.cpp  planner.cpp  query_planner.cpp  subplans_table.cpp
src/processor/: CMakeLists.txt  processor.cpp  processor_task.cpp  warning_context.cpp
src/storage/: CMakeLists.txt  checkpointer.cpp  database_header.cpp  disk_array.cpp  disk_array_collection.cpp  file_db_id_utils.cpp  file_handle.cpp  free_space_manager.cpp  optimistic_allocator.cpp  overflow_file.cpp  page_manager.cpp  shadow_file.cpp  shadow_utils.cpp  storage_manager.cpp  storage_utils.cpp  storage_version_info.cpp  undo_buffer.cpp
src/transaction/: CMakeLists.txt  transaction.cpp  transaction_context.cpp  transaction_manager.cpp
tools/: CMakeLists.txt
tools/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_parser.cpp  benchmark_runner.cpp  main.cpp
tools/shell/: CMakeLists.txt  embedded_shell.cpp  linenoise.cpp  shell_development_guide.md  shell_runner.cpp
tools/wasm/: package-lock.json  package.json
(+2068 files in other folders)
