if(${BUILD_SHELL})
    add_subdirectory(shell)
endif()
if(${BUILD_JAVA})
    add_subdirectory(../modules/gorgonzola-api-langs/java_api java_api)
endif()
if(${BUILD_NODEJS})
    add_subdirectory(../modules/gorgonzola-api-langs/nodejs_api nodejs_api)
endif()
if(${BUILD_PYTHON})
    add_subdirectory(../modules/gorgonzola-api-langs/python_api python_api)
endif()
if(${BUILD_BENCHMARK})
    add_subdirectory(benchmark)
endif()
if(${BUILD_WASM})
    add_subdirectory(../modules/gorgonzola-api-langs/wasm wasm)
endif()